# git-mcp-server

./: .env.example  .gitignore  .railwayignore  CHANGELOG.md  Dockerfile  Procfile  RAILWAY_DEPLOYMENT_SPEC.md  README.md  commit_fix.py  mcp_http_client.py  push_fix.py  pyproject.toml  quick_commit.py  railway.json  test_commit.py  test_commit_push.py  test_final.py  test_message.py
.github/: copilot-instructions.md
.kiro/specs/git-commit-mcp-server/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: api-reference.md  architecture-flow.md  architecture.md  authentication.md  cursor-setup.md  railway-deployment.md  railway-troubleshooting.md  usage.md
examples/: auth_example.py
scripts/: publish-pypi.ps1  publish-testpypi.ps1
src/git_commit_mcp/: __init__.py  __main__.py  ai_client.py  auth.py  change_tracker.py  changelog_manager.py  config.py  git_operations.py  http_server.py  logging_config.py  message_generator.py  metrics.py  models.py  repository_manager.py  server.py  transport.py
tests/: __init__.py  test_auth.py  test_change_tracker.py  test_changelog_manager.py  test_config.py  test_git_operations.py  test_http_server.py  test_integration.py  test_message_generator.py  test_metrics.py  test_models.py  test_repository_manager.py
