[project]
name = "git-commit-mcp-server"
version = "0.1.0"
description = "MCP server for automated Git commit workflows with conventional commit messages"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Suraj Fale", email = "surajfale1@gmail.com" }
]
keywords = ["mcp", "git", "commit", "automation", "conventional-commits", "changelog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=0.1.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/surajfale/git-mcp-server"
Repository = "https://github.com/surajfale/git-mcp-server"
Issues = "https://github.com/surajfale/git-mcp-server/issues"
Documentation = "https://github.com/surajfale/git-mcp-server#readme"

[project.optional-dependencies]
remote = [
    "pyjwt>=2.8.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sse-starlette>=1.6.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
git-commit-mcp = "git_commit_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_commit_mcp"]
